Hopefully fixed background height changing when user scrolls on mobile

--- a/style.css
+++ b/style.css
@@ -35,19 +35,14 @@ body, html {
 .networkLinks__icon {
     box-sizing: border-box;
     height: var(--iconWidth); 
-    /* filter: grayscale(100%); */
     margin: 5px;
     padding: 0px; 
+    fill: var(--iconColor);
+    transition: 0.2s;
     width: var(--iconWidth); 
     height: var(--iconWidth);
     max-width: var(--iconWidth); 
-    max-height: var(--iconWidth);
-    fill: var(--iconColor);
-    /* background: #1da1f2; */
-    /* width: var(--iconWidth);  */
-    /* border-radius: 50%; */
-    /* border: 3px solid var(--iconColor); */
-    transition: 0.2s;
+    max-height: var(--iconWidth); 
 }
 
 .networkLinks__icon.linkedin{ 
@@ -72,7 +67,7 @@ body, html {
 .networkLinks__icon.github {
     /* keep github icon's circular shape  */
     border-radius: 50%;
-    border: 3px solid black;
+    border: 1px solid black;
 }
 
 .networkLinks__icon.github:hover {
